--- a/index.html
+++ b/index.html
@@ -33,63 +33,63 @@
     <div class="pagina p2" id="p2">
             <ul>
                 <div class="redonda"> 
-                <a href="../MP08UF1001_HaroJ_inici/haroJ.html">
+                <a href="MP08UF101_Jharo_inici/haroJ.html">
                     <li>
                         <b>INICI</b>
                     </li>
                 </a>
                 </div>
                 <div class="redonda">
-                <a href="../MP08UF1002_haroJ_calendari/calendari.html">
+                <a href="MP08UF102_Jharo_calendari/calendari.html">
                     <li>
                         <b>CALENDARI</b>
                     </li>
                 </a>
                 </div>
                 <div class="redonda">
-                <a href="../MP08UF1003_HaroJ_feedly/index.html">
+                <a href="MP08UF103_Jharo_feedly/index.html">
                     <li>
                         <b>FEEDLY</b>
                     </li>
                 </a>
                 </div>
                 <div class="redonda">
-                <a href="../MP08UF1004_HaroJ_Flotacions/index.html">
+                <a href="MP08UF104_Jharo_Flotacions/index.html">
                     <li>
                         <b>FLOATIONS</b>
                     </li>
                 </a>
                 </div>
                 <div class="redonda">
-                <a href="../MP08UF1005_HaroJ_Floations/index.html">
+                <a href="MP08UF105_Jharo_Floations/index.html">
                     <li>
                        <b>FLOATIONS 2</b>
                     </li>
                 </a>
                 </div>
                 <div class="redonda">
-                <a href="../M08UF1006_Jharo_watchmen/index.html">
+                <a href="MP08UF106_Jharo_watchmen/index.html">
                     <li>
                        <b>WATCHMEN</b>
                     </li>
                 </a>
                 </div>
                 <div class="redonda">
-                <a href="../M08UF1007_Jharo_ifpgram/index.html">
+                <a href="MP08UF107_Jharo_ifpgram/index.html">
                     <li>
                        <b>IFPGRAM</b>
                     </li>
                 </a>
                 </div>
                 <div class="redonda">
-                <a href="../M08UF1008_Jharo_floreta/index.html">
+                <a href="MP08UF108_Jharo_floreta/index.html">
                     <li>
                         <b>FLORETA</b>
                     </li>
                 </a>
                 </div>
                 <div class="redonda">
-                <a href="../M08UF1009_Jharo_careta/index.html">
+                <a href="MP08UF109_Jharo_careta/index.html">
                     <li>
                        <b>CARETA</b>
                     </li>
