--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <nav>
-        <img src="./img/Sin título-2.png" alt="">
+        <img src="img/Sin título-2.png" alt="">
         <ul>
             <a href="#p1"><li>PORTFOLI</li></a>
             <a href="#p2"><li>TREBALL</li></a>
