--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>la meva pagina</title>
+    <meta name="theme-color" content="orange">
+    <meta name="msapplication-navbutton-color" content="orange">
+    <meta name="appel-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="orange">
+
+    <link rel="icon" sizes="192x192" href="img/iconjh.ico">
+    <link rel="icon" sizes="512x512" href="img/iconjh.ico">
+    <link rel="appel-touch-icon" href="img/iconjh.ico">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
