--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <meta name="appel-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="orange">
 
-    <link rel="icon" sizes="192x192" href="img/iconjh.ico">
-    <link rel="icon" sizes="512x512" href="img/iconjh.ico">
-    <link rel="appel-touch-icon" href="img/iconjh.ico">
+    <link rel="icon" sizes="192x192" href="img/webicon.ico">
+    <link rel="icon" sizes="512x512" href="img/webicon.ico">
+    <link rel="appel-touch-icon" href="img/webicon.ico">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Funnel+Display:wght@300..800&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Pattaya&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" type="image/x-icon" href="img/iconjh.ico">
+    <link rel="icon" type="image/x-icon" href="img/webicon.ico">
 </head>
 <body>
 
