--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="icon" sizes="192x192" href="img/webicon.ico">
     <link rel="icon" sizes="512x512" href="img/webicon.ico">
-    <link rel="appel-touch-icon" href="img/webicon.ico">
+    <link rel="apple-touch-icon" href="img/webicon.ico">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
